# vernac

./: .gitignore  CODEOWNERS  README.md  dev-requirements.txt  pyproject.toml
.github/workflows/: test-some-examples.yml
examples/reliable/: benchmark.vn  emoji.vn  fizzbuzz-with-test-buggy.py  fizzbuzz-with-test.vn  fizzbuzz.vn  hngpt-with-test.vn  hngpt.vn  mergesort.vn  todo-cli.vn
examples/reliable/todo-tui/: todo-storage.vn  todo-tui.vn
examples/unreliable/: count_gpt_titles.vn  hntoday.vn  snake.vn
src/vernac/: compile.py  openai.py  pipeline.py  util.py
src/vernac/stages/: all.py  check_help.py  check_tests.py  document_module.py  generate_code.py  guess_dependencies.py  interface.py  map_modules.py  package.py  read_source.py  run_pipelines.py
src/vernac/test/: test_util.py
