[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vernac"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "requests",
    "openai",
    "shiv",
    "tomli_w",
    "rich",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ipython",
    "pip-tools",
    "twine",
]

[project.scripts]
vernac = "vernac.compile:script_main"

[tool.setuptools_scm]
