[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vernac"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "openai",
    "shiv",
    "tomli_w",
    "rich",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/bsilverthorn/vernac"
repository = "https://github.com/bsilverthorn/vernac"

[project.optional-dependencies]
dev = [
    "ipython",
    "pip-tools",
    "build",
    "twine",
]

[project.scripts]
vernac = "vernac.compile:script_main"

[tool.setuptools_scm]
