[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vernac"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "openai",
    "shiv",
    "tomli_w",
    "rich",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/bsilverthorn/vernac"
"Repository" = "https://github.com/bsilverthorn/vernac"

[project.optional-dependencies]
dev = [
    "ipython",
    "pip-tools",
]

[project.scripts]
vernac = "vernac.compile:script_main"

[tool.setuptools_scm]
